# leetcode

./: CLAUDE.md  justfile  pyproject.toml
data/: problems.json  problems.txt
docs/: 1d-dynamic-programming.md  2d-dynamic-programming.md  advanced-graphs.md  arrays-and-hashing.md  backtracking.md  binary-search.md  graphs.md  greedy.md  heap-priority-queue.md  intervals.md  sliding-window.md  stack.md  stacks.md  trees.md  tries.md  two-pointers.md
docs/superpowers/plans/: 2026-05-09-category-study-files.md
docs/superpowers/specs/: 2026-05-08-category-study-files-design.md
leetcode/: __init__.py  app.py  cli.py  constants.py  init.py
leetcode/models/: __init__.py  problem.py
leetcode/services/: __init__.py  problem_manager.py  spaced_repetition.py
topics/: backtracking.md  binary-search.md  bit-manipulation.md  disjoint-set-union.md  linked-list.md  math-and-geometry.md  study-plan.md
