[project]
name = "leetcode"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorfsson",email = "jeffreychea234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry.scripts]
leetcode = "leetcode.app:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
