[project]
name = "leetcode"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorfsson",email = "jeffreychea234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "regex (>=2024.11.6,<2025.0.0)"
]

[tool.poetry.scripts]
leetcode = "leetcode.app:main"
get-problem = "leetcode.app:main --get-problem"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
